# shadows

./: .gitignore  2025-10-13-i-need-to-prepare-some-ground-state-of-a-molecular.txt  README.md  pyproject.toml
archive/: test_shadows.py  utils.py
benchmarks/: COLLECT_SAMPLES_BENCHMARK.md  ESTIMATE_OVERLAP_BENCHMARK.md  README.md  SCALING_ANALYSIS.md  __init__.py  analyze_collect_samples.py  analyze_results.py  benchmark_collect_samples.py  benchmark_estimate_overlap.py  benchmark_ground_state.py  benchmark_shadow_scaling.py  scaling_results.csv
docs/: convergence.txt
results/convergence/H4_d0.50_sto-3g_nruns20/: convergence_all_runs.csv  convergence_summary.csv  metadata.json
results/convergence/H4_d0.75_sto-3g_nruns20/: convergence_all_runs.csv  convergence_summary.csv  metadata.json
results/convergence/H4_d1.00_sto-3g_nruns25/: convergence_all_runs.csv  convergence_summary.csv  metadata.json
results/convergence/H6_d0.50_sto-3g_nruns20/: convergence_all_runs.csv  convergence_summary.csv  metadata.json
scripts/: convergence.py  example.py  h2_stretching.py  plotting_config.py  test.py  test_shadows.py  utils.py
src/shadow_ci/: __init__.py  brueckner.py  estimator.py  hamiltonian.py  shadows.py  utils.py
src/shadow_ci/chemistry/: __init__.py  hamiltonian.py
src/shadow_ci/solvers/: __init__.py  base.py  fci.py  vqe.py
tests/: __init__.py  check_ccsd_t2_structure.py  methodology_comparison.md  test_bitstring.py  test_composition_debug.py  test_double_amplitudes_antisym.py  test_double_amplitudes_symmetry.py  test_endianness_audit.py  test_rhf_optimization.py  test_shadow_protocol.py  test_stabilizer.py
